# SGProcessingManager

./: .gitmodules  CMakeLists.txt  README.md  gnus-processing-schema.json
.github/workflows/: generate-headers.yml
cmake/: CommonBuildParameters.cmake  config.cmake.in  functions.cmake
doc/: processing-json-guide.md
include/DataSplitter/: DataSplitter.hpp  ImageSplitter.hpp
include/ProcessingBase/: ProcessingManager.hpp
include/Processors/: processing_processor.hpp
include/datasplitter/: ImageSplitter.hpp
include/outcome/: outcome.hpp  sgprocmgr-outcome-register.hpp  sgprocmgr-outcome.hpp
include/processingbase/: ProcessingManager.hpp
include/processors/: processing_processor.hpp  processing_processor_mnn_audio.hpp  processing_processor_mnn_bool.hpp  processing_processor_mnn_buffer.hpp  processing_processor_mnn_float.hpp  processing_processor_mnn_image.hpp  processing_processor_mnn_int.hpp  processing_processor_mnn_mat2.hpp  processing_processor_mnn_mat3.hpp  processing_processor_mnn_mat4.hpp  processing_processor_mnn_ml.hpp  processing_processor_mnn_string.hpp  processing_processor_mnn_tensor.hpp  processing_processor_mnn_texture1d.hpp  processing_processor_mnn_texturecube.hpp  processing_processor_mnn_vec2.hpp  processing_processor_mnn_vec3.hpp  processing_processor_mnn_vec4.hpp  processing_processor_mnn_volume.hpp
include/util/: InputTypes.hpp  logger.hpp  sgprocmgr-logger.hpp  sha256.hpp
src/: CMakeLists.txt
src/DataSplitter/: CMakeLists.txt
src/ProcessingBase/: CMakeLists.txt  ProcessingManager.cpp
src/Processors/: CMakeLists.txt
src/datasplitter/: CMakeLists.txt  ImageSplitter.cpp
src/processingbase/: CMakeLists.txt  ProcessingManager.cpp
src/processors/: CMakeLists.txt  processing_processor_mnn_audio.cpp  processing_processor_mnn_bool.cpp  processing_processor_mnn_buffer.cpp  processing_processor_mnn_float.cpp  processing_processor_mnn_image.cpp  processing_processor_mnn_int.cpp  processing_processor_mnn_mat2.cpp  processing_processor_mnn_mat3.cpp  processing_processor_mnn_mat4.cpp  processing_processor_mnn_ml.cpp  processing_processor_mnn_string.cpp  processing_processor_mnn_tensor.cpp  processing_processor_mnn_texture1d.cpp  processing_processor_mnn_texturecube.cpp  processing_processor_mnn_vec2.cpp  processing_processor_mnn_vec3.cpp  processing_processor_mnn_vec4.cpp  processing_processor_mnn_volume.cpp
src/util/: CMakeLists.txt  InputTypes.cpp  logger.cpp  sgprocmgr-logger.cpp  sha256.cpp
